tests/compile_fail/config_model_submodule.rs
use ledgerful::config::model::local_model::LocalModelConfig;

fn main() {
    let _ = LocalModelConfig::default();
}
